# learning-lm-rs

./: Cargo.toml  Report.md
chatgpt-web/: README.md  index.html  pnpm-lock.yaml  vite.config.ts
chatgpt-web/src/api/: index.ts
chatgpt-web/src/store/modules/auth/: index.ts
chatgpt-web/src/store/modules/settings/: helper.ts
chatgpt-web/src/store/modules/user/: helper.ts
chatgpt-web/src/typings/: chat.d.ts
chatgpt-web/src/views/chat/: index.vue
chatgpt-web/src/views/exception/404/: index.vue
chatgpt-web/src/views/exception/500/: index.vue
src/: main.rs  model.rs  operators.rs  params.rs  response.rs  schemas.rs  service.rs
