[package]
name = "learning-lm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4.3"
tokenizers = "0.19.1"
rand = "0.8"
clap = { version = "4.5.18", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.3", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "tokio", "server"] }
http-body-util = "0.1"
tokio-stream = "0.1"
reqwest = { version = "0.11.27" }
